[WEB-8746] Users in ad-hoc report have overlapping items - added automatic column width based on its content - added expand/collapse all checkbox for overflowing cells - moved data extraction logic from view to controller - ignoring length value from database as no longer relevant

--- a/webroot/css/generic.css
+++ b/webroot/css/generic.css
@@ -82,6 +82,17 @@ img.logo {
     margin-bottom: 10px;
 }
 
+input#expandCollapseAll,
+label {
+    cursor: pointer;
+    margin-bottom: 5pt;
+}
+
+label {
+    font-size: 10pt;
+    vertical-align: text-top;
+}
+
 table {
     float: left;
     clear: both;
